First total compile harp

--- a/_harp/css/default2.less
+++ b/_harp/css/default2.less
@@ -777,8 +777,9 @@ footer {
 }
 section.error404 {
   text-align: center;
+  margin: auto;
   h1 {
-    display: inherit;
+    display: inline-block;
     font-size: 15rem;
     line-height: 1.5rem;
     margin-bottom: 0;
