--- a/_harp/es/apoya.jade
+++ b/_harp/es/apoya.jade
@@ -1,8 +1,8 @@
-section(role="content")
+section(role='content')
 	section.wrap-mini.wrap-gray.container
 		.row
 			.twelvecol
-				h2.title Support Coderise
+				h2.title Apoya Coderise
 			div
 	section#support.wrap-mini.container
 		.row
@@ -17,30 +17,30 @@ section(role="content")
 						| for participants - keeping it accessible to everyone.
 					p
 						strong Program costs
-						| including material for daily courses and visits to&#160;local tech initiatives - anything from Barcamps and DemoDays to Meetups in Medellin.
+						| including material for daily courses and visits to local tech initiatives - anything from Barcamps and DemoDays to Meetups in Medellin.
 					p
-						strong Program Evaluation&#160;
-						| to make sure we evaluate what works and what doesn"t, in order to continue improving.
+						strong Program Evaluation 
+						| to make sure we evaluate what works and what doesn't, in order to continue improving.
 				br
 				#description
 					h5 More about what Coderise will do
 					p
 						| We have a hunch that by creating a space where kids gain the tools and connections necessary to launch into the field of programming web applications, in the long run -- kids are going to be inspired to use their creativity for anything from creating great products, to solving local community issues through technology to taking charge of their destiny.
 					p
-						| In terms of tools, we mean the basic concepts any good programmer needs to create great web applications:  HTML, some CSS and Javascript and electronics with Arduino and Node.js.  In addition, we"re going to get them acquainted with Github, Heroku, how to search for code  on the web -- all key tools for getting the job done.  How basic these concepts are over others is arguable.  What we REALLY want to teach is HOW to learn.
+						| In terms of tools, we mean the basic concepts any good programmer needs to create great web applications:  HTML, some CSS and Javascript and electronics with Arduino and Node.js.  In addition, we're going to get them acquainted with Github, Heroku, how to search for code  on the web -- all key tools for getting the job done.  How basic these concepts are over others is arguable.  What we REALLY want to teach is HOW to learn.
 					p
-						| In terms of connections, we mean the necessay exchange of past experiences from people already out there launching a startup that is filling a global social need.  To empower youth that likely don"t know much about the programming and tech start up scene, to meet people like @AndresBarreto from Onswipe,  Alex Torrenegra (@Torrenegra) and our other tech entrepreneurs is essential to accompany tools with a vision.
+						| In terms of connections, we mean the necessay exchange of past experiences from people already out there launching a startup that is filling a global social need.  To empower youth that likely don't know much about the programming and tech start up scene, to meet people like @AndresBarreto from Onswipe,  Alex Torrenegra (@Torrenegra) and our other tech entrepreneurs is essential to accompany tools with a vision.
 					p
-						| We plan to do all of this in two months in Vive Lab at Ruta N, the main innovation center of Medellin, three times a week, covering transport and food for all participants and speakers that come all the way out to Medell&#237;n for the program.
+						| We plan to do all of this in two months in Vive Lab at Ruta N, the main innovation center in Medellin, three times a week, covering transport and food for all participants and speakers that come all the way out to Medellín for the program.
 			.fourcol.last.perks
 				ul
 					li.funding.rounded.shadow
 						p.description
 							| Support our crowdfunding campaign to empower kids in developing nations through code.
-						form.paypal-form(action="https://www.paypal.com/cgi-bin/webscr", method="post")
-							input(type="hidden", name="cmd", value="_s-xclick")
-							input(type="hidden", name="hosted_button_id", value="87USZS9R4YV3C")
-							a.btn.btn-outline(href="javascript:void(0)", onclick="submit();", name="submit", alt="PayPal - The safer, easier way to pay online!") Support now!
+						form.paypal-form(method='post', action='https://www.paypal.com/cgi-bin/webscr')
+							input(type='hidden', value='_s-xclick', name='cmd')
+							input(type='hidden', value='87USZS9R4YV3C', name='hosted_button_id')
+							a.btn.btn-outline(alt='PayPal - The safer, easier way to pay online!', name='submit', onclick='submit();', href='javascript:void(0)') Apoya ya!
 							//input.btn(type="submit", href="http://www.indiegogo.com/coderise", name="submit", alt="PayPal - The safer, easier way to pay online!", value="Support Now!")
 					li.perk.rounded.shadow
 						h2.title
@@ -65,4 +65,4 @@ section(role="content")
 							.amount.bold $1,000
 							.perk-title.notranslate Founding Fellow
 						p.description
-							| You"ll be recognized as sponsoring a speaker lecture + receive exclusive pictures of the event + recognized as a member of the League of Innovation on our website + mention in social media channels
+							| You'll be recognized as sponsoring a speaker lecture + receive exclusive pictures of the event + recognized as a member of the League of Innovation on our website + mention in social media channels
