--- a/_harp/es/_layout.jade
+++ b/_harp/es/_layout.jade
@@ -18,39 +18,39 @@ html
 			header.container(role="banner")
 				.row
 					.twelvecol
-						a.logo(href="/index.html")
+						a.logo(href="/es/index.html")
 							| //coderise
 						a.icon-list menu
 						nav(role="navigation")
 							ul
 								li.dropdown
 									a(href="javascript:void(0)")
-										| About
+										| Acerca
 										span.icon-dropdown-arrow &#9660;
 									ul
 										li
-											a(href="/about") About us
+											a(href="/es/acerca") Sobre Coderise
 										li
-											a(href="/how") How it works
+											a(href="/es/como") Como funciona
 										li
-											a(href="/mentors") Mentors
+											a(href="/es/mentores") Mentores
 										li
-											a(href="/team") Our Team
+											a(href="/es/equipo") Equipo
 										li
-											a(href="/students") Our Students
+											a(href="/es/estudiantes") Estudiantes
 								li.dropdown
 									a(href="javascript:void(0)")
-										| Press
+										| Prensa
 										span.icon-dropdown-arrow &#9660;
 									ul
 										li
-											a(href="/press") Coverage
+											a(href="/es/prensa") Cubrimiento
 										li
-											a(href="/releases") Press Releases
+											a(href="/es/comunicados") Comunicados
 								//li
-									a(href="https://support.coderise.org") Support
+									a(href="https://support.coderise.org") Apoya
 								li
-									a(href="/apply") Apply
+									a(href="/es/aplica") Aplica
 								//li.last
 									a(href="/posts/") Blog
 
@@ -58,7 +58,7 @@ html
 
 			footer.wrap-mini.wrap-navy
 				.row
-					a.left.localization(href="/es/index") Coderise en ESPAÑOL
+					a.left.localization(href="/index.html") Coderise in ENGLISH
 					.social-widgets
 						a.tb(href="http://coderise.tumblr.com/")
 						a.tw(href="http://twitter.com/Code_rise")
