--- a/_harp/posts/_layout.jade
+++ b/_harp/posts/_layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
 	head
 		title= title
+			|  - Coderise
 		meta(charset="UTF-8")
 		meta(name="description" content="#{ description })")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
