--- a/_harp/team.jade
+++ b/_harp/team.jade
@@ -6,7 +6,7 @@ section#team(role="content")
 		.row
 			.sixcol.center
 				article
-					img.thumbs(src="images/andrea-cornejo.jpg")
+					img.thumbs(src="/images/andrea-cornejo.jpg")
 					h6.colorGreen Andrea Cornejo / Program Director
 					p
 						| Andrea is a serial social entrepreneur, and an economic development and impact evaluation specialist originally form Peru. Andrea has founded several initiatives, including EmprendeSocial, the first online publication for social entrepreneurship in Latin America, Proyecto Vi&#241;a Vieja, a community development initiative in Peru. Andrea currently is director of Coderise, an NGO focused on empowering high school students of developing nations by teaching them how to creat great web applications and by connecting them to the dynamic tech start-up and software programmer community to draw inspiration.
@@ -14,7 +14,7 @@ section#team(role="content")
 						a.link(href="mailto:andrea@coderise.com") andrea@coderise.com
 			.sixcol.last.center
 				article
-					img.thumbs(src="images/carolina.jpg")
+					img.thumbs(src="/images/carolina.jpg")
 					h6.colorGreen Ana Carolina Lopez  / Relaciones Publicas
 					p
 						| Comunicadora social y periodista de la Universidad Pontificia Bolivariana, Medell&#237;n-Colombia, he trabajado en diferentes &#225;reas de la comunicaci&#243;n desde la televisi&#243;n, comunicaci&#243;n organizaci&#243;n y relaciones p&#250;blicas, en estos momentos trabajo para la Fundaci&#243;n Colombia Mestiza que tiene como objetivo divulgar y promover la cultura colombiana y con el programa Coderise estoy apoyando la parte de relaciones p&#250;blicas en Medell&#237;n; mis intereses profesionales van en pro de programas que ayuden al desarrollo de Colombia y de Latinoam&#233;rica desde todos los aspectos.
@@ -24,7 +24,7 @@ section#team(role="content")
 		.row
 			.sixcol.center
 				article
-					img.thumbs(src="images/catherine-lopez.jpg")
+					img.thumbs(src="/images/catherine-lopez.jpg")
 					h6.colorGreen Catherine Lopez / Development Director / Directora de Desarrollo
 					p
 						| I am a passionate person who takes on each project with full dedication and professionalism. I am good working with little direction, as long as there is a goal. I consider myself resourceful, strategic and focused, with great communication skills.
@@ -34,7 +34,7 @@ section#team(role="content")
 						a.link(href="mailto:c@coderise.org") c@coderise.org
 			.sixcol.last.center
 				article
-					img.thumbs(src="images/camilo.png")
+					img.thumbs(src="/images/camilo.png")
 					h6 Camilo Aguilar - Curriculum Advisor / Asesor T&#233;cnico de Curriculo
 					p
 						| Camilo Aguilar has over ten years of professional experience, split through his time in Colombia and New York. In Colombia, Camilo was key part in the design and development of the Colombia government portal and the core SOA platform for Suramericana de Seguros. Throughout his years of working, he has contributed extensively to open-source projects of his own, especially in the NodeJS community. Camilo has worked for recognized startups in New York City such as BugLabs and currently works for Onswipe, while also being one of the principal leaders of Coderise.
@@ -44,7 +44,7 @@ section#team(role="content")
 		.row
 			.sixcol.center
 				article
-					img.thumbs(src="images/julian-david-duque.jpg")
+					img.thumbs(src="/images/julian-david-duque.jpg")
 					h6 Juli&#225;n Duque / Lead Instructor
 					p
 						| Developer by Passion, Engineer at Nodejitsu, Co-Organizer of Medell&#237;nJS and JSConf Colombia.
@@ -52,7 +52,7 @@ section#team(role="content")
 						a.link(href="mailto:julianduquej@gmail.com") julianduquej@gmail.com
 			.sixcol.last.center
 				article
-					img.thumbs(src="images/adrian-estrada.jpg")
+					img.thumbs(src="/images/adrian-estrada.jpg")
 					h6 Adrian Estrada / Instructor
 					p
 						| Seasoned developer with over of 12 years of experience with multiple programming languages, currently working as a senior developer at Wedlinkmedia, Co-Organizer of Medell&#237;nJS.
@@ -62,7 +62,7 @@ section#team(role="content")
 		.row
 			.sixcol.center
 				article
-					img.thumbs(src="images/sandrazuniga.png")
+					img.thumbs(src="/images/sandrazuniga.png")
 					h6 Sandra Zuniga Guzman - Community Manager / Directora de Comunidad
 					p
 						| Sandra is an enterprising 23-year-old with a deep interest in social justice and community engagement. She has acted as a National Ambassador for the Youth Leadership Institute, is transitioning from Programs Director for the International Youth Council - USA chapter to Project Manager for the global organization, and supports  many efforts to champion youth-led development. She is pursuing an MA in International Relations at the Johns Hopkins Paul H. Nitze School of Advanced International Studies.
@@ -70,7 +70,7 @@ section#team(role="content")
 						a.link(href="mailto:sandra.zunigaguzman@gmail.com") sandra.zunigaguzman@gmail.com
 			.sixcol.last.center
 				article
-					img.thumbs(src="images/jeffrey.jpg")
+					img.thumbs(src="/images/jeffrey.jpg")
 					h6 Jeffrey Biles / Curriculum Advisor
 					p
 						| Jeffrey Biles is the head of
@@ -85,7 +85,7 @@ section#team(role="content")
 		.row
 			.sixcol.center
 				article
-					img.thumbs(src="images/elizabeth_ramirez.png")
+					img.thumbs(src="/images/elizabeth_ramirez.png")
 					h6 Elizabeth Ramirez / Developer
 					p
 						| Software Engineer for Search, Archive and Semantics at The New York Times. Working in projects related with Machine Learning and Natural Language Processing. Passionate about Particle Physics and Scientific Computing in Python.
@@ -93,7 +93,7 @@ section#team(role="content")
 						a.link(href="mailto:eramirem@gmail.com") eramirem@gmail.com
 			.sixcol.last.center
 				article
-					img.thumbs(src="images/jhoana_guzman.jpg")
+					img.thumbs(src="/images/jhoana_guzman.jpg")
 					h6 Jhoanna Guzmán / Popayán Director
 					p
 						| Administradora de empresas de la Universidad Autónoma del Cauca, la mayor parte de mi experiencia ha sido en la formulación y ejecución de proyectos de CTI en el departamento del Cauca.
@@ -103,7 +103,7 @@ section#team(role="content")
 		.row
 			.sixcol.center
 				article
-					img.thumbs(src="images/elizabeth_ramirez.png")
+					img.thumbs(src="/images/elizabeth_ramirez.png")
 					h6 Oriana Robles Muñoz / Popayán Instructor
 					p
 						| Ingeniera en Automática Industrial de la Universidad del Cauca, con experiencia en el área educación y diseño curricular en formación en tecnología y emprendimiento para niños y jóvenes. Experiencia en formación de docentes y directivos docentes para la creación de planes de gestión para el uso educativo de nuevas tecnologías aplicadas a la educación y gestión escolar. Co-fundador de Racore Ingenieria Divertida.
@@ -111,7 +111,7 @@ section#team(role="content")
 						a.link(href="mailto:orianarob@gmail.com") orianarob@gmail.com
 			.sixcol.last.center
 				article
-					img.thumbs(src="images/jhoana.jpg")
+					img.thumbs(src="/images/jhoana.jpg")
 					h6 José Luis García / Popayán Instructor
 					p
 						| Ingeniero de sistemas de la Universidad Autónoma del Cauca. con experiencia en el desarrollo de software. Co-fundador de Racore Ingenieria Divertida.
