--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -29,28 +29,28 @@ html
 										span.icon-dropdown-arrow &#9660;
 									ul
 										li
-											a(href="/about") About us
+											a(href="/about.html") About us
 										li
-											a(href="/how") How it works
+											a(href="/how.html") How it works
 										li
-											a(href="/mentors") Mentors
+											a(href="/mentors.html") Mentors
 										li
-											a(href="/team") Our Team
+											a(href="/team.html") Our Team
 										li
-											a(href="/students") Our Students
+											a(href="/students.html") Our Students
 								li.dropdown
 									a(href="javascript:void(0)")
 										| Press
 										span.icon-dropdown-arrow &#9660;
 									ul
 										li
-											a(href="/press") Coverage
+											a(href="/press.html") Coverage
 										li
-											a(href="/releases") Press Releases
+											a(href="/releases.html") Press Releases
 								//li
 									a(href="https://support.coderise.org") Support
 								li
-									a(href="/apply") Apply
+									a(href="/apply.html") Apply
 								//li.last
 									a(href="/posts/") Blog
 
@@ -58,7 +58,7 @@ html
 
 			footer.wrap-mini.wrap-navy
 				.row
-					a.left.localization(href="/es/index") Coderise en ESPAÑOL
+					a.left.localization(href="/es/index.html") Coderise en ESPAÑOL
 					.social-widgets
 						a.tb(href="http://coderise.tumblr.com/")
 						a.tw(href="http://twitter.com/Code_rise")
