--- a/_harp/es/_layout.jade
+++ b/_harp/es/_layout.jade
@@ -29,28 +29,28 @@ html
 										span.icon-dropdown-arrow &#9660;
 									ul
 										li
-											a(href="/es/acerca") Sobre Coderise
+											a(href="/es/acerca.html") Sobre Coderise
 										li
-											a(href="/es/como") Como funciona
+											a(href="/es/como.html") Como funciona
 										li
-											a(href="/es/mentores") Mentores
+											a(href="/es/mentores.html") Mentores
 										li
-											a(href="/es/equipo") Equipo
+											a(href="/es/equipo.html") Equipo
 										li
-											a(href="/es/estudiantes") Estudiantes
+											a(href="/es/estudiantes.html") Estudiantes
 								li.dropdown
 									a(href="javascript:void(0)")
 										| Prensa
 										span.icon-dropdown-arrow &#9660;
 									ul
 										li
-											a(href="/es/prensa") Cubrimiento
+											a(href="/es/prensa.html") Cubrimiento
 										li
-											a(href="/es/comunicados") Comunicados
+											a(href="/es/comunicados.html") Comunicados
 								//li
 									a(href="https://support.coderise.org") Apoya
 								li
-									a(href="/es/aplica") Aplica
+									a(href="/es/aplica.html") Aplica
 								//li.last
 									a(href="/posts/") Blog
 
