--- a/_harp/posts/_layout.jade
+++ b/_harp/posts/_layout.jade
@@ -68,7 +68,7 @@ html
 
 			footer.wrap-mini.wrap-navy
 				.row
-					a.left.localization(href="index-es.html") Coderise en ESPAÑOL
+					a.left.localization(href="/es/index.html") Coderise en ESPAÑOL
 					.social-widgets
 						a.tb(href="http://coderise.tumblr.com/")
 						a.tw(href="http://twitter.com/Code_rise")
