Update video meet class 2012 to 2014

--- a/_harp/css/default2.less
+++ b/_harp/css/default2.less
@@ -283,6 +283,10 @@ header[role="promo"] {
   height: 270px;
   padding: 40px 0;
 }
+.video p.caption {
+  font-size: 0.8rem;
+  text-align: center !important;
+}
 header[role="promo"] article {
   width: 480px;
   padding: 57px 0;
