--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -28,9 +28,10 @@ section(role="content")
 				p
 					| Coderise is a program free of cost for the students. Weekly transportation and meals will be covered.
 			.sixcol.last.center
-				h4 Meet Coderise Class of 2012
+				h4 Meet Coderise Class of 2014
 				.video(style="padding: 0;")
-					iframe(width="100%", height="100%", src="http://www.youtube.com/embed/w2fbbMfTuiU?controls=0&showinfo=0", frameborder="0", allowfullscreen="")
+					iframe(width='100%', height='100%', frameborder='0', allowfullscreen='', src='http://www.youtube.com/embed/hzAuGZwN0gQ?autohide=1&controls=0&showinfo=0')
+					p.caption Video owned by Ruta-N Medellín
 	section#keypoints.wrap.wrap-gray.container
 		.row
 			h2 Coderise seeks to:
