--- a/_harp/es/index.jade
+++ b/_harp/es/index.jade
@@ -30,7 +30,8 @@ section(role='content')
 			.sixcol.last.center
 				h4 Conoce la Clase Coderise 2012
 				.video(style='padding: 0;')
-					iframe(width='100%', height='100%', frameborder='0', allowfullscreen='', src='http://www.youtube.com/embed/w2fbbMfTuiU?autohide=1&controls=0&showinfo=0')
+					iframe(width='100%', height='100%', frameborder='0', allowfullscreen='', src='http://www.youtube.com/embed/hzAuGZwN0gQ?autohide=1&controls=0&showinfo=0')
+					p.caption Video Propiedad de Ruta-N Medellín
 	section#keypoints.wrap.wrap-gray.container
 		.row
 			h3 Coderise busca:
