Change the 2012 for 2014 on es page and change countries names on en page - Index pages

--- a/_harp/en/index.jade
+++ b/_harp/en/index.jade
@@ -31,9 +31,9 @@ section(role="content")
 										span &#9654;
 			.threecol
 				a(href="http://witperu.org/proyectos/coderise4girls/")
-					h2 Perú
+					h2 Peru
 			.threecol
-				h2 República Dominicana
+				h2 Dominican Republic
 			//- .threecol.center.last
 				h2 
 	section#email-banner.wrap.wrap-gray.container
