--- a/_harp/medellin.jade
+++ b/_harp/medellin.jade
@@ -3,13 +3,31 @@ section(role='content')
 		.row
 			.twelvecol
 				h2.title Proceso de Aplicación
-			div
 	section.wrap-mini.container
 		.row
 			.twelvecol
 				h5 ¿Quién puede aplicar a Coderise 2015?
 				p Coderise busca jóvenes apasionados por aprender y curiosos sobre tecnología y desarrollo de software.
-				p Coderise es para jóvenes en los últimos tres años de secundaria y que vivan en el área metropolitana de la ciudad de Medellín.
-				p Jóvenes interesados en aplicar deben de revisar el calendario de fechas de clase y asegurar que puedan cumplir con todas las clases.
-				br
-				h6 En poco abriremos una nueva convocatoria, así que debes estar pendiente para registrarte, ¡Te esperamos!
+				p Para poder aplicar debes tener en cuenta los siguientes requisitos
+				ul.list-req-apply
+					li Tener el consentimiento y permiso de tus padres.
+					li Vivir en el área metropolitana de la ciudad de Medellín.
+					li Estar en uno de los últimos tres años de secundaria (9, 10 u 11, en el caso de estar en 12 grado igual puedes aplicar)
+					li Estar disponibles para todas las clases.
+						ul
+							li Martes y Jueves - 5:00pm a 8:00pm
+							li Sábado - 9:00am a 12:00m
+				img(src="images/cronograma_2015.jpg", alt="cronograma_2015" style="padding: 2em 0;")
+				h5 Formulario de aplicación
+				#wufoo-p63t8uq1s7algm
+					| Fill out my 
+					a(href='https://coderise.wufoo.com/forms/p63t8uq1s7algm') online form
+				script(type='text/javascript').
+					var p63t8uq1s7algm;(function(d, t) {
+					var s = d.createElement(t), options = { 'userName':'coderise', 'formHash':'p63t8uq1s7algm', 'autoResize':true, 'height':'4560', 'async':true, 'host':'wufoo.com', 'header':'show', 'ssl':true};
+					s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
+					s.onload = s.onreadystatechange = function() {
+					var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
+					try { p63t8uq1s7algm = new WufooForm();p63t8uq1s7algm.initialize(options);p63t8uq1s7algm.display(); } catch (e) {}};
+					var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
+					})(document, 'script');
