--- a/_harp/css/default2.less
+++ b/_harp/css/default2.less
@@ -7,6 +7,7 @@ article,
 aside,
 details,
 figcaption,
+
 figure,
 footer,
 header,
@@ -908,5 +909,14 @@ header {
         color: #09A1A1;
       }  
     }
+  }
+}
+ul.list-req-apply {
+  li {
+    padding-left: 2em;
+  }
+  li:before {
+    content: "▶ ";
+    font-size: 0.5em;
   }
 }
