Add apply now bar to the index - #CallToAction

--- a/_harp/css/default2.less
+++ b/_harp/css/default2.less
@@ -920,3 +920,14 @@ ul.list-req-apply {
     font-size: 0.5em;
   }
 }
+.home-apply-now {
+  h2.title {
+    text-align: center;
+    font-size: 1.3em;
+  }
+  a.btn {
+    padding: 0.5rem 1rem;
+    margin-left: 1rem;
+    vertical-align: middle;
+  }
+}
