--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,3 +1,9 @@
+section.wrap-mini.wrap-gray.container.home-apply-now
+	.row
+		.twelvecol
+			h2.title ¡Ya llego Coderise Medellín 2015!
+				a.btn(href="medellin.html")
+					| ¡Aplica ya!
 header.container(role="promo")
 	.row
 		.sixcol
