Close 2015 medellin convocatory

--- a/_harp/en/_layout.jade
+++ b/_harp/en/_layout.jade
@@ -60,7 +60,7 @@ html
 
 			footer.wrap-mini.wrap-navy
 				.row
-					a.left.localization(href="/es/index.html") Coderise en ESPAÑOL
+					a.left.localization(href="/index.html") Coderise en ESPAÑOL
 					.social-widgets
 						a.w-tb(href="http://coderise.tumblr.com/")
 						a.w-tw(href="http://twitter.com/Code_rise")
