--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,4 +1,4 @@
-section.wrap-mini.wrap-gray.container.home-apply-now
+//section.wrap-mini.wrap-gray.container.home-apply-now
 	.row
 		.twelvecol
 			h2.title ¡Ya llego Coderise Medellín 2015!
