--- a/_harp/medellin.jade
+++ b/_harp/medellin.jade
@@ -18,16 +18,6 @@ section(role='content')
 							li Martes y Jueves - 5:00pm a 8:00pm
 							li Sábado - 9:00am a 12:00m
 				img(src="images/cronograma_2015.jpg", alt="cronograma_2015" style="padding: 2em 0;")
-				h5 Formulario de aplicación
-				#wufoo-p63t8uq1s7algm
-					| Fill out my 
-					a(href='https://coderise.wufoo.com/forms/p63t8uq1s7algm') online form
-				script(type='text/javascript').
-					var p63t8uq1s7algm;(function(d, t) {
-					var s = d.createElement(t), options = { 'userName':'coderise', 'formHash':'p63t8uq1s7algm', 'autoResize':true, 'height':'4560', 'async':true, 'host':'wufoo.com', 'header':'show', 'ssl':true};
-					s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-					s.onload = s.onreadystatechange = function() {
-					var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-					try { p63t8uq1s7algm = new WufooForm();p63t8uq1s7algm.initialize(options);p63t8uq1s7algm.display(); } catch (e) {}};
-					var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-					})(document, 'script');
+				h3.center El proceso de aplicación para esta convocatoria ya ha terminado
+					br
+					| Pronto lanzaremos otra
