Add Agora to the supporters

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -130,3 +130,7 @@ section(role="content")
 				.twocol.last
 					a(href="http://vicepresidencia.gob.do/")
 						img(src="/images/supporters/vicepresidenciado.png", height="30")
+			.slogo
+				.twocol
+					a(href="http://agora.co/")
+						img(src="/images/supporters/agora.svg", height="30")
